deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
      - name: nginx
        image: europe-west3-docker.pkg.dev/swr-schulung-basic-1/swr-schulung-basic-1/nginx-demo:latest
        ports:
        - containerPort: 8080
